<resources>
    <string name="app_name">HomeThru</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_chat">Chat</string>
    <string name="title_mypage">My Page</string>

    <!-- Hardcoded(MyPage) -->
    <!-- fragment_mypage.xml -->
    <string name="nickname">곽두팔75 </string>
    <string name="nickname_title">Nickname </string>
    <string name="email_title">Email </string>
    <string name="email_text">homethru@konyang.ac.kr </string>
    <string name="edit_profile">프로필 편집</string>
    <string name="recentSeenProduct">더보기</string>
    <string name="recentSeenProduct_title">최근 본 상품들</string>
    <string name="writing_button">작성한 글  〉</string>
    <string name="exchangeList_button">거래 목록  〉</string>
    <string name="service">고객 센터  〉</string>
    <string name="logout_button">로그아웃</string>
    <string name="deleteUser_button">회원 탈퇴</string>
    <string name="user_image_description">사용자 프로필 이미지</string>
    <string name="help">사용자를 위한 탭 및 지원</string>
    <string name="account">계정</string>

    <!-- for_customer.xml -->
    <string name="question_button">1:1 문의</string>
    <string name="report_button">신고</string>

    <!-- onebyone_inquiry.xml -->
    <string name="inquiry_text">문의 내용</string>

    <!-- edit_inquiry.xml -->
    <string name="inquiry_Images">Inquiry Image</string>
    <string name="edit_images">기존 게시물 사진</string>
    <string name="edit_text">기존 게시물 내용</string>
    <string name="input_text">내용을 입력하세요</string>

    <!-- trade_list.xml -->
    <string name="recently_trade">최근 거래 목록</string>

    <!-- dialog_inquiry.xml -->
    <string name="inquiry_title">문의 사진</string>
    <string name="inquiry_images_description">inquiry_images_description</string>
    <string name="inquiry_content">문의 내용</string>
    <string name="inquiry_hint">문의 내용을 작성해 주세요.</string>
    <string name="button_save">저장</string>

    <!-- faq_child.xml -->
    <string name="answer">answer</string>

    <!-- editor.xml -->
    <string name="Information">Information</string>
    <string name="ImageTitle">이미지 수정</string>
    <string name="button_description">profile_image</string>
    <string name="nameTitle">이름</string>
    <string name="nameHint">name</string>
    <string name="emailTitle">이메일</string>
    <string name="emailHint">email</string>
    <string name="PnumberTitle">전화번호</string>
    <string name="PnumberHint">phoneNumber</string>
    <string name="pwTitle">비밀번호</string>
    <string name="pwHint">password</string>

</resources>